--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-gradient-to-r from-pink-300 to-yellow-300">
+<body class="bg-gradient-to-r from-blue-200 to-blue-100">
     <header class="sticky top-0 bg-white shadow-lg">
         <div class="container mx-auto flex justify-between items-center p-4">
             <img src="images/logo-placeholder.svg" alt="Donut Delivery Logo" class="h-12">
