--- a/index.html
+++ b/index.html
@@ -1,83 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donut Delivery - Christchurch</title>
-    <link rel="icon" href="images/favicon-donut.svg" type="image/svg+xml">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Donut Delivery NZ</title>
+  <style>
+    body { margin: 0; font-family: 'Poppins', sans-serif; background: #fffafc; color: #333; }
+    header { background: #ffb6c1; padding: 20px; text-align: center; }
+    header h1 { margin: 0; font-size: 2rem; color: #fff; }
+    nav a { margin: 0 15px; text-decoration: none; color: #fff; font-weight: bold; }
+    .hero { background: url('donuts-hero.jpg') center/cover no-repeat; height: 400px; display: flex; align-items: center; justify-content: center; color: white; text-shadow: 2px 2px 4px #000; }
+    .hero h2 { font-size: 2.5rem; }
+    .section { padding: 60px 20px; text-align: center; }
+    .menu-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 30px; }
+    .card { background: #fff; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px; transition: transform 0.2s; }
+    .card:hover { transform: translateY(-5px); }
+    .card img { max-width: 100%; border-radius: 10px; }
+    footer { background: #ffb6c1; color: white; padding: 20px; text-align: center; }
+  </style>
 </head>
-<body class="bg-gradient-to-r from-blue-200 to-blue-100">
-    <header class="sticky top-0 bg-white shadow-lg">
-        <div class="container mx-auto flex justify-between items-center p-4">
-            <img src="images/logo-placeholder.svg" alt="Donut Delivery Logo" class="h-12">
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="#home" class="hover:text-pink-500">Home</a></li>
-                    <li><a href="menu.html" class="hover:text-pink-500">Menu</a></li>
-                    <li><a href="order.html" class="hover:text-pink-500">Order</a></li>
-                    <li><a href="delivery.html" class="hover:text-pink-500">Delivery Info</a></li>
-                    <li><a href="reviews.html" class="hover:text-pink-500">Reviews</a></li>
-                    <li><a href="about.html" class="hover:text-pink-500">About Us</a></li>
-                    <li><a href="contact.html" class="hover:text-pink-500">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<body>
+  <header>
+    <h1>Donut Bliss NZ</h1>
+    <nav>
+      <a href="#menu">Menu</a>
+      <a href="#order">Order</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <main>
-        <section id="home" class="hero bg-cover bg-center h-screen flex items-center justify-center" style="background-image: url('images/donut-placeholder-1.svg');">
-            <div class="text-center text-white">
-                <h1 class="text-5xl font-bold mb-4">Delicious Donuts Delivered to Your Door!</h1>
-                <a href="order.html" class="bg-pink-500 text-white py-2 px-4 rounded-full hover:bg-pink-600 transition">Order Now</a>
-            </div>
-        </section>
+  <section class="hero">
+    <h2>Fresh Pastel Donuts Delivered To Your Door 🍩</h2>
+  </section>
 
-        <section class="featured-donuts py-16">
-            <div class="container mx-auto text-center">
-                <h2 class="text-3xl font-bold mb-8">Featured Donuts</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <div class="rounded-lg shadow-lg overflow-hidden">
-                        <img src="images/donut-placeholder-1.svg" alt="Donut 1" class="w-full">
-                        <div class="p-4">
-                            <h3 class="text-xl font-semibold">Sprinkle Delight</h3>
-                            <p class="text-lg">$3.00</p>
-                            <button class="bg-pink-500 text-white py-1 px-3 rounded hover:bg-pink-600 transition">Add to Cart</button>
-                        </div>
-                    </div>
-                    <div class="rounded-lg shadow-lg overflow-hidden">
-                        <img src="images/donut-placeholder-2.svg" alt="Donut 2" class="w-full">
-                        <div class="p-4">
-                            <h3 class="text-xl font-semibold">Chocolate Heaven</h3>
-                            <p class="text-lg">$3.50</p>
-                            <button class="bg-pink-500 text-white py-1 px-3 rounded hover:bg-pink-600 transition">Add to Cart</button>
-                        </div>
-                    </div>
-                    <div class="rounded-lg shadow-lg overflow-hidden">
-                        <img src="images/donut-placeholder-3.svg" alt="Donut 3" class="w-full">
-                        <div class="p-4">
-                            <h3 class="text-xl font-semibold">Vanilla Dream</h3>
-                            <p class="text-lg">$3.00</p>
-                            <button class="bg-pink-500 text-white py-1 px-3 rounded hover:bg-pink-600 transition">Add to Cart</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+  <section id="menu" class="section">
+    <h2>Our Donuts</h2>
+    <div class="menu-grid">
+      <div class="card">
+        <img src="strawberry-donut.jpg" alt="Strawberry Donut">
+        <h3>Strawberry Swirl</h3>
+        <p>$4.50</p>
+      </div>
+      <div class="card">
+        <img src="choco-donut.jpg" alt="Chocolate Donut">
+        <h3>Chocolate Dream</h3>
+        <p>$5.00</p>
+      </div>
+      <div class="card">
+        <img src="vanilla-donut.jpg" alt="Vanilla Donut">
+        <h3>Vanilla Frost</h3>
+        <p>$4.00</p>
+      </div>
+    </div>
+  </section>
 
-    <footer class="bg-white py-4">
-        <div class="container mx-auto text-center">
-            <p class="text-gray-600">© 2023 Donut Delivery. All rights reserved.</p>
-            <div class="flex justify-center space-x-4 mt-2">
-                <a href="#" class="text-pink-500">Instagram</a>
-                <a href="#" class="text-pink-500">Facebook</a>
-                <a href="#" class="text-pink-500">TikTok</a>
-            </div>
-        </div>
-    </footer>
+  <section id="order" class="section">
+    <h2>Order Now</h2>
+    <p>Delivery available across Christchurch. Click below to start your order.</p>
+    <button style="padding: 10px 20px; background:#ff69b4; border:none; color:white; font-size:1rem; border-radius:10px; cursor:pointer;">
+      Start Order
+    </button>
+  </section>
 
-    <script src="js/script.js"></script>
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <p>Email: hello@donutbliss.co.nz</p>
+    <p>Phone: +64 123 456 789</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Donut Bliss NZ | All Rights Reserved</p>
+  </footer>
 </body>
 </html>
