--- a/Order.html
+++ b/Order.html
@@ -1,71 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Donuts - Donut Delivery</title>
-    <link rel="icon" href="images/favicon-donut.svg" type="image/svg+xml">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Order Donuts | Donut Bliss NZ</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/favicon-donut.svg" type="image/svg+xml">
 </head>
-<body class="bg-gradient-to-r from-blue-200 to-blue-100 min-h-screen flex flex-col">
-    <header class="sticky top-0 bg-white shadow-lg">
-        <div class="container mx-auto flex justify-between items-center p-4">
-            <img src="images/logo-placeholder.svg" alt="Donut Delivery Logo" class="h-12">
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="index.html" class="hover:text-pink-500">Home</a></li>
-                    <li><a href="menu.html" class="hover:text-pink-500">Menu</a></li>
-                    <li><a href="order.html" class="hover:text-pink-500 font-bold">Order</a></li>
-                    <li><a href="delivery.html" class="hover:text-pink-500">Delivery Info</a></li>
-                    <li><a href="reviews.html" class="hover:text-pink-500">Reviews</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<body>
+  <!-- Header -->
+  <header>
+    <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" style="height:60px;">
+    <h1>Donut Bliss NZ</h1>
+    <nav>
+      <a href="Index.html">Home</a>
+      <a href="#order">Order</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <main class="flex-1 container mx-auto py-8 px-4">
-        <h1 class="text-3xl font-bold text-center mb-8">Your Cart</h1>
-        <div id="cart-items" class="bg-white rounded-lg shadow-md p-6 mb-8">
-            <!-- Cart items will be injected here by JS -->
-            <p class="text-center text-gray-500">Your cart is empty.</p>
-        </div>
-        <h2 class="text-2xl font-bold mb-4">Checkout</h2>
-        <form id="checkout-form" class="bg-white rounded-lg shadow-md p-6 space-y-4 max-w-lg mx-auto">
-            <div>
-                <label class="block font-semibold mb-1" for="name">Name</label>
-                <input class="w-full rounded-full border border-pink-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-300" type="text" id="name" name="name" required>
-            </div>
-            <div>
-                <label class="block font-semibold mb-1" for="address">Address</label>
-                <input class="w-full rounded-full border border-pink-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-300" type="text" id="address" name="address" required>
-            </div>
-            <div>
-                <label class="block font-semibold mb-1" for="phone">Phone</label>
-                <input class="w-full rounded-full border border-pink-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-300" type="tel" id="phone" name="phone" required>
-            </div>
-            <div>
-                <label class="block font-semibold mb-1" for="delivery-time">Preferred Delivery Time</label>
-                <input class="w-full rounded-full border border-pink-200 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-300" type="time" id="delivery-time" name="delivery-time" required>
-            </div>
-            <div>
-                <label class="block font-semibold mb-1">Payment</label>
-                <div class="bg-pink-100 rounded-full px-4 py-2 text-pink-700 text-center">Payment on delivery (cash or bank transfer)</div>
-            </div>
-            <button type="submit" class="w-full bg-pink-500 text-white font-bold py-2 rounded-full hover:bg-pink-600 transition">Place Order</button>
-        </form>
-    </main>
+  <!-- Order Section -->
+  <section id="order" class="section">
+    <h2>Place Your Order 🍩</h2>
+    <p>Fill in the form below and we’ll deliver fresh donuts to your door!</p>
 
-    <footer class="bg-white py-4 mt-8">
-        <div class="container mx-auto text-center">
-            <p class="text-gray-600">© 2023 Donut Delivery. All rights reserved.</p>
-            <div class="flex justify-center space-x-4 mt-2">
-                <a href="#" class="text-pink-500">Instagram</a>
-                <a href="#" class="text-pink-500">Facebook</a>
-                <a href="#" class="text-pink-500">TikTok</a>
-            </div>
-        </div>
-    </footer>
-    <script src="js/script.js"></script>
+    <form id="orderForm" class="order-form">
+      <label for="name">Your Name</label><br>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
+
+      <label for="email">Email</label><br>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+
+      <label for="phone">Phone Number</label><br>
+      <input type="tel" id="phone" name="phone" placeholder="+64 123 456 789" required><br><br>
+
+      <label for="flavour">Choose Your Donut</label><br>
+      <select id="flavour" name="flavour" required>
+        <option value="Strawberry Swirl">🍓 Strawberry Swirl - $4.50</option>
+        <option value="Chocolate Dream">🍫 Chocolate Dream - $5.00</option>
+        <option value="Vanilla Frost">🍦 Vanilla Frost - $4.00</option>
+      </select><br><br>
+
+      <label for="quantity">Quantity</label><br>
+      <input type="number" id="quantity" name="quantity" min="1" max="12" value="1" required><br><br>
+
+      <label for="address">Delivery Address</label><br>
+      <textarea id="address" name="address" rows="3" placeholder="Enter your address" required></textarea><br><br>
+
+      <button type="submit" class="order-btn">Submit Order</button>
+    </form>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <p>Email: hello@donutbliss.co.nz</p>
+    <p>Phone: +64 123 456 789</p>
+    <img src="images/map-placeholder.svg" alt="Map Location" style="max-width:300px; margin-top:20px;">
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Donut Bliss NZ | All Rights Reserved</p>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
