--- a/index.html
+++ b/index.html
@@ -4,72 +4,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donut Delivery NZ</title>
-  <style>
-    body { margin: 0; font-family: 'Poppins', sans-serif; background: #fffafc; color: #333; }
-    header { background: #ffb6c1; padding: 20px; text-align: center; }
-    header h1 { margin: 0; font-size: 2rem; color: #fff; }
-    nav a { margin: 0 15px; text-decoration: none; color: #fff; font-weight: bold; }
-    .hero { background: url('donuts-hero.jpg') center/cover no-repeat; height: 400px; display: flex; align-items: center; justify-content: center; color: white; text-shadow: 2px 2px 4px #000; }
-    .hero h2 { font-size: 2.5rem; }
-    .section { padding: 60px 20px; text-align: center; }
-    .menu-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 30px; }
-    .card { background: #fff; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px; transition: transform 0.2s; }
-    .card:hover { transform: translateY(-5px); }
-    .card img { max-width: 100%; border-radius: 10px; }
-    footer { background: #ffb6c1; color: white; padding: 20px; text-align: center; }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/favicon-donut.svg" type="image/svg+xml">
 </head>
 <body>
+  <!-- Header -->
   <header>
+    <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" style="height:60px;">
     <h1>Donut Bliss NZ</h1>
     <nav>
       <a href="#menu">Menu</a>
-      <a href="#order">Order</a>
+      <a href="Order.html">Order</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <h2>Fresh Pastel Donuts Delivered To Your Door 🍩</h2>
   </section>
 
+  <!-- Menu Section -->
   <section id="menu" class="section">
     <h2>Our Donuts</h2>
     <div class="menu-grid">
       <div class="card">
-        <img src="strawberry-donut.jpg" alt="Strawberry Donut">
+        <img src="images/donut-placeholder-1.svg" alt="Strawberry Donut">
         <h3>Strawberry Swirl</h3>
         <p>$4.50</p>
       </div>
       <div class="card">
-        <img src="choco-donut.jpg" alt="Chocolate Donut">
+        <img src="images/donut-placeholder-2.svg" alt="Chocolate Donut">
         <h3>Chocolate Dream</h3>
         <p>$5.00</p>
       </div>
       <div class="card">
-        <img src="vanilla-donut.jpg" alt="Vanilla Donut">
+        <img src="images/donut-placeholder-3.svg" alt="Vanilla Donut">
         <h3>Vanilla Frost</h3>
         <p>$4.00</p>
       </div>
     </div>
   </section>
 
+  <!-- Order Section -->
   <section id="order" class="section">
     <h2>Order Now</h2>
     <p>Delivery available across Christchurch. Click below to start your order.</p>
-    <button style="padding: 10px 20px; background:#ff69b4; border:none; color:white; font-size:1rem; border-radius:10px; cursor:pointer;">
-      Start Order
-    </button>
+    <a href="Order.html">
+      <button class="order-btn">Start Order</button>
+    </a>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="section">
     <h2>Contact Us</h2>
     <p>Email: hello@donutbliss.co.nz</p>
     <p>Phone: +64 123 456 789</p>
+    <img src="images/map-placeholder.svg" alt="Map Location" style="max-width:300px; margin-top:20px;">
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Donut Bliss NZ | All Rights Reserved</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
