--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Donut Delivery NZ</title>
+  <title>Donut Bliss NZ</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon-donut.svg" type="image/svg+xml">
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" style="height:60px;">
-    <h1>Donut Bliss NZ</h1>
+  <header class="site-header">
+    <div class="logo-container">
+      <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" class="logo">
+      <h1>Donut Bliss NZ</h1>
+    </div>
     <nav>
       <a href="#menu">Menu</a>
       <a href="Order.html">Order</a>
@@ -21,46 +23,49 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h2>Fresh Pastel Donuts Delivered To Your Door 🍩</h2>
+    <div class="hero-content">
+      <h2>🍩 Sweet, Fresh & Delivered</h2>
+      <p>Handmade donuts daily in Christchurch — pastel perfection at your doorstep.</p>
+      <a href="Order.html" class="cta-btn">Order Now</a>
+    </div>
   </section>
 
   <!-- Menu Section -->
-  <section id="menu" class="section">
+  <section id="menu" class="section menu">
     <h2>Our Donuts</h2>
+    <p class="subtitle">Choose from our best-sellers, made with love every morning.</p>
     <div class="menu-grid">
       <div class="card">
         <img src="images/donut-placeholder-1.svg" alt="Strawberry Donut">
         <h3>Strawberry Swirl</h3>
-        <p>$4.50</p>
+        <p class="price">$4.50</p>
       </div>
       <div class="card">
         <img src="images/donut-placeholder-2.svg" alt="Chocolate Donut">
         <h3>Chocolate Dream</h3>
-        <p>$5.00</p>
+        <p class="price">$5.00</p>
       </div>
       <div class="card">
         <img src="images/donut-placeholder-3.svg" alt="Vanilla Donut">
         <h3>Vanilla Frost</h3>
-        <p>$4.00</p>
+        <p class="price">$4.00</p>
       </div>
     </div>
   </section>
 
-  <!-- Order Section -->
-  <section id="order" class="section">
-    <h2>Order Now</h2>
-    <p>Delivery available across Christchurch. Click below to start your order.</p>
-    <a href="Order.html">
-      <button class="order-btn">Start Order</button>
-    </a>
+  <!-- About Section -->
+  <section class="section about">
+    <h2>Why Choose Us?</h2>
+    <p>We use locally sourced ingredients and bake every donut fresh each morning. 
+       Perfect for birthdays, office treats, or simply a sweet pick-me-up. 💕</p>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="section">
+  <section id="contact" class="section contact">
     <h2>Contact Us</h2>
     <p>Email: hello@donutbliss.co.nz</p>
     <p>Phone: +64 123 456 789</p>
-    <img src="images/map-placeholder.svg" alt="Map Location" style="max-width:300px; margin-top:20px;">
+    <img src="images/map-placeholder.svg" alt="Map Location" class="map">
   </section>
 
   <!-- Footer -->
