--- a/index.html
+++ b/index.html
@@ -2,77 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Donut Bliss NZ</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="images/favicon-donut.svg" type="image/svg+xml">
 </head>
 <body>
-  <!-- Header -->
-  <header class="site-header">
-    <div class="logo-container">
+  <header class="crumbl-header">
+    <div class="logo-name">
       <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" class="logo">
-      <h1>Donut Bliss NZ</h1>
+      <h1 class="site-name">Donut Bliss NZ</h1>
     </div>
-    <nav>
+    <nav class="nav-links">
       <a href="#menu">Menu</a>
       <a href="Order.html">Order</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h2>🍩 Sweet, Fresh & Delivered</h2>
-      <p>Handmade donuts daily in Christchurch — pastel perfection at your doorstep.</p>
-      <a href="Order.html" class="cta-btn">Order Now</a>
+  <section class="crumbl-hero">
+    <div class="hero-inner">
+      <h2>Fresh Donuts Rotating Weekly</h2>
+      <p>Made daily with pastel flair—only at Donut Bliss NZ.</p>
+      <a href="Order.html" class="btn-primary">Order Now</a>
     </div>
   </section>
 
-  <!-- Menu Section -->
-  <section id="menu" class="section menu">
-    <h2>Our Donuts</h2>
-    <p class="subtitle">Choose from our best-sellers, made with love every morning.</p>
-    <div class="menu-grid">
-      <div class="card">
-        <img src="images/donut-placeholder-1.svg" alt="Strawberry Donut">
+  <section id="menu" class="flavor-grid">
+    <h2>This Week’s Favorites</h2>
+    <div class="grid-container">
+      <div class="flavor-card">
+        <img src="images/donut-placeholder-1.svg" alt="Strawberry">
         <h3>Strawberry Swirl</h3>
-        <p class="price">$4.50</p>
       </div>
-      <div class="card">
-        <img src="images/donut-placeholder-2.svg" alt="Chocolate Donut">
+      <div class="flavor-card">
+        <img src="images/donut-placeholder-2.svg" alt="Chocolate">
         <h3>Chocolate Dream</h3>
-        <p class="price">$5.00</p>
       </div>
-      <div class="card">
-        <img src="images/donut-placeholder-3.svg" alt="Vanilla Donut">
+      <div class="flavor-card">
+        <img src="images/donut-placeholder-3.svg" alt="Vanilla">
         <h3>Vanilla Frost</h3>
-        <p class="price">$4.00</p>
       </div>
     </div>
   </section>
 
-  <!-- About Section -->
-  <section class="section about">
+  <section class="why-section">
     <h2>Why Choose Us?</h2>
-    <p>We use locally sourced ingredients and bake every donut fresh each morning. 
-       Perfect for birthdays, office treats, or simply a sweet pick-me-up. 💕</p>
+    <p>Weekly flavors, handcrafted textures, and the perfect pastel aesthetic for your tastebuds.</p>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section contact">
+  <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>Email: hello@donutbliss.co.nz</p>
-    <p>Phone: +64 123 456 789</p>
-    <img src="images/map-placeholder.svg" alt="Map Location" class="map">
+    <p>hello@donutbliss.co.nz | +64 123 456 789</p>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Donut Bliss NZ | All Rights Reserved</p>
+  <footer class="footer">
+    <p>© 2025 Donut Bliss NZ</p>
   </footer>
-
-  <script src="js/script.js"></script>
 </body>
 </html>
