--- a/Order.html
+++ b/Order.html
@@ -9,58 +9,64 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" style="height:60px;">
-    <h1>Donut Bliss NZ</h1>
-    <nav>
+  <header class="crumbl-header">
+    <div class="logo-name">
+      <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" class="logo">
+      <h1 class="site-name">Donut Bliss NZ</h1>
+    </div>
+    <nav class="nav-links">
       <a href="Index.html">Home</a>
-      <a href="#order">Order</a>
+      <a href="Order.html">Order</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Order Section -->
-  <section id="order" class="section">
-    <h2>Place Your Order 🍩</h2>
-    <p>Fill in the form below and we’ll deliver fresh donuts to your door!</p>
+  <!-- Hero -->
+  <section class="crumbl-hero">
+    <div class="hero-inner">
+      <h2>🍩 Place Your Order</h2>
+      <p>Handmade donuts delivered to Christchurch. Fill in your details below.</p>
+    </div>
+  </section>
 
+  <!-- Order Form -->
+  <section class="section">
     <form id="orderForm" class="order-form">
-      <label for="name">Your Name</label><br>
-      <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
+      <label for="name">Your Name</label>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-      <label for="email">Email</label><br>
-      <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-      <label for="phone">Phone Number</label><br>
-      <input type="tel" id="phone" name="phone" placeholder="+64 123 456 789" required><br><br>
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" placeholder="+64 123 456 789" required>
 
-      <label for="flavour">Choose Your Donut</label><br>
+      <label for="flavour">Choose Your Donut</label>
       <select id="flavour" name="flavour" required>
         <option value="Strawberry Swirl">🍓 Strawberry Swirl - $4.50</option>
         <option value="Chocolate Dream">🍫 Chocolate Dream - $5.00</option>
         <option value="Vanilla Frost">🍦 Vanilla Frost - $4.00</option>
-      </select><br><br>
+      </select>
 
-      <label for="quantity">Quantity</label><br>
-      <input type="number" id="quantity" name="quantity" min="1" max="12" value="1" required><br><br>
+      <label for="quantity">Quantity</label>
+      <input type="number" id="quantity" name="quantity" min="1" max="12" value="1" required>
 
-      <label for="address">Delivery Address</label><br>
-      <textarea id="address" name="address" rows="3" placeholder="Enter your address" required></textarea><br><br>
+      <label for="address">Delivery Address</label>
+      <textarea id="address" name="address" rows="3" placeholder="Enter your address" required></textarea>
 
-      <button type="submit" class="order-btn">Submit Order</button>
+      <button type="submit" class="btn-primary">Submit Order</button>
     </form>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section">
+  <!-- Contact -->
+  <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>Email: hello@donutbliss.co.nz</p>
     <p>Phone: +64 123 456 789</p>
-    <img src="images/map-placeholder.svg" alt="Map Location" style="max-width:300px; margin-top:20px;">
+    <img src="images/map-placeholder.svg" alt="Map Location" class="map">
   </section>
 
-  <!-- Footer -->
-  <footer>
+  <footer class="footer">
     <p>© 2025 Donut Bliss NZ | All Rights Reserved</p>
   </footer>
 
