--- a/index.html
+++ b/index.html
@@ -2,61 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Donut Bliss NZ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🍩 Sweet Whirl Donuts</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="crumbl-header">
-    <div class="logo-name">
-      <img src="images/logo-placeholder.svg" alt="Donut Bliss Logo" class="logo">
-      <h1 class="site-name">Donut Bliss NZ</h1>
-    </div>
-    <nav class="nav-links">
-      <a href="#menu">Menu</a>
-      <a href="Order.html">Order</a>
-      <a href="#contact">Contact</a>
-    </nav>
+  <header>
+    <h1>🍩 Sweet Whirl Donuts</h1>
+    <p>Colourful, Fresh & Delivered to Your Door</p>
   </header>
 
-  <section class="crumbl-hero">
-    <div class="hero-inner">
-      <h2>Fresh Donuts Rotating Weekly</h2>
-      <p>Made daily with pastel flair—only at Donut Bliss NZ.</p>
-      <a href="Order.html" class="btn-primary">Order Now</a>
+  <section class="hero">
+    <img src="images/logo-placeholder.svg" alt="Sweet Whirl Logo">
+    <button onclick="window.location.href='Order.html'">Order Now</button>
+  </section>
+
+  <section class="menu">
+    <h2>Our Bestsellers</h2>
+    <div class="donut-list">
+      <div class="donut-card">
+        <img src="images/donut-placeholder-1.svg" alt="Rainbow Delight">
+        <h3>Rainbow Delight</h3>
+        <p>Vanilla glaze topped with rainbow sprinkles</p>
+      </div>
+      <div class="donut-card">
+        <img src="images/donut-placeholder-2.svg" alt="Choco Crunch">
+        <h3>Choco Crunch</h3>
+        <p>Chocolate glaze with crushed nuts</p>
+      </div>
+      <div class="donut-card">
+        <img src="images/donut-placeholder-3.svg" alt="Berry Bliss">
+        <h3>Berry Bliss</h3>
+        <p>Strawberry glaze with creamy pink frosting</p>
+      </div>
     </div>
   </section>
 
-  <section id="menu" class="flavor-grid">
-    <h2>This Week’s Favorites</h2>
-    <div class="grid-container">
-      <div class="flavor-card">
-        <img src="images/donut-placeholder-1.svg" alt="Strawberry">
-        <h3>Strawberry Swirl</h3>
-      </div>
-      <div class="flavor-card">
-        <img src="images/donut-placeholder-2.svg" alt="Chocolate">
-        <h3>Chocolate Dream</h3>
-      </div>
-      <div class="flavor-card">
-        <img src="images/donut-placeholder-3.svg" alt="Vanilla">
-        <h3>Vanilla Frost</h3>
-      </div>
-    </div>
-  </section>
-
-  <section class="why-section">
-    <h2>Why Choose Us?</h2>
-    <p>Weekly flavors, handcrafted textures, and the perfect pastel aesthetic for your tastebuds.</p>
-  </section>
-
-  <section id="contact" class="contact">
-    <h2>Contact Us</h2>
-    <p>hello@donutbliss.co.nz | +64 123 456 789</p>
-  </section>
-
-  <footer class="footer">
-    <p>© 2025 Donut Bliss NZ</p>
+  <footer>
+    <p>© 2025 Sweet Whirl Donuts · Christchurch, NZ</p>
   </footer>
 </body>
 </html>
